# PiercingEye

./: CMakeLists.txt  README.md  compile.bat  cross_compilation_tool_chain.sh
include/: error.h  libir_infoparse.h  libircam.h  libircmd.h  libircmd_temp.h  libirdfu.h  libiri2c.h  libirparse.h  libirspi.h  libirtemp.h  libiruart.h  libirupgrade.h  libiruvc.h  libirv4l2.h  sample.h
msvc/: windows_usb_stream_cmd.sln  windows_usb_stream_cmd.vcxproj  windows_usb_stream_cmd.vcxproj.filters
src/: sample.cpp
